@@ -6,7 +6,7 @@ SUBDIRS = include .
 
 libplibc_la_LDFLAGS = \
  -export-dynamic -Wl,--no-undefined -Wl,--export-all-symbols -lole32 \
- -lshell32 -lstdc++ -lcomdlg32 -lgdi32 \
+ -lshell32 -lcomdlg32 -lgdi32 \
  -version-info 1:0:0
 
 libplibc_la_SOURCES = \
@@ -55,7 +55,7 @@ libplibc_la_SOURCES = \
  resolv_ms.c \
  rmdir.c \
  select.c \
- shortcut.cc \
+ shortcut.c \
  socket.c \
  stat.c \
  statfs.c \
